JK - added more to the app in projects.ts
